<resources>
    <string name="app_name">VoteXpress</string>
    <string name="splash_description">Electoral Commission Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="login_btn_label">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_btn_label">Register</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="full_name">Full Name</string>
    <string name="voter_id">Voter ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="faqs">Frequently Asked Questions</string>
    <string name="voting_location">Voting Location</string>
    <string name="vote_pm">Vote for Prime Minister</string>
    <string name="vote_pp">Vote for Political Party</string>
    <string name="submit">Submit Vote</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_API_KEY">AIzaSyDgNhVzWYaAutx5aPH0t-wqhd_yiXbLxec</string>
    <string name="forgot_pw">Forgot Password?</string>
    <string name="questions">Questions?</string>
    <string name="answers">Answer…</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone_number">+64220400840</string>
    <string name="phone_description">Phone description</string>
    <string name="recipient_email">jope112@ess.ais.ac.nz</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send Email</string>
    <string name="or">or</string>
    <string name="call">Call:</string>
    <string name="party">Party</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="back">Back</string>
    <string name="leader">Leader</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change_pp">Change Profile Picture</string>
    <string name="username">User name</string>
    <string name="user_email">user@email.com</string>
    <string name="test_username">Test User</string>
    <string name="test_email">Test Email</string>
    <string name="rate_experience">Please rate your voting experience</string>
    <string name="comments">Comments</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="thanks">Thank you for using VoteXpress!</string>
    <string name="finish">Close App</string>
    <string name="web">Web</string>
    <string name="ec_website">elections.nz</string>
</resources>