<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">


    <!-- App Title -->
    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/splash_description"
        app:srcCompat="@drawable/ec_logo" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/mail_icon"
        android:drawablePadding="5dp"
        android:elevation="5dp"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="password"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/lock_icon"
        android:drawablePadding="5dp"
        android:elevation="5dp"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:text="@string/login_btn_label"
        android:textColor="@android:color/white" />

    <!-- Forgot Password Link -->
    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pw"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Don't have an account yet? -->
    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:gravity="center"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>
