<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/startActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">



    <!-- Welcome Text -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:srcCompat="@drawable/ec_logo"
        android:contentDescription="@string/splash_description"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="@font/anek_devanagari_semibold"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:fontFamily="@font/anek_devanagari_semibold"/>

</LinearLayout>
