<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash"
    tools:context=".ProfileActivity">

    <!-- Profile Picture -->

    <ImageView
        android:id="@+id/ivBtn_Back"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon" />

    <ImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/profile_circle_background"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Change Profile Picture Button -->
    <Button
        android:id="@+id/btn_change_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:text="@string/change_pp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_picture" />

    <!-- User Name -->
    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_picture" />

    <!-- User Email -->
    <TextView
        android:id="@+id/tv_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:textColor="@color/black"
        android:text="@string/user_email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFullName" />

    <TextView
        android:id="@+id/tv_user_voterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voter_id"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_user_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
