<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactUs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash"
    tools:context=".ContactUsActivity">


    <TextView
        android:id="@+id/tvContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContactUs">


        <TextView
            android:id="@+id/tvRecipientEmail"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="@font/anek_devanagari_semibold"
            android:paddingStart="10dp"
            android:paddingTop="12dp"
            android:paddingEnd="10dp"
            android:text="@string/recipient_email"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/mail_icon" />

        <EditText
            android:id="@+id/etSubject"
            android:layout_width="270dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Subject"
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/subject"
            android:drawablePadding="5dp"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/subject"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="270dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Message"
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/message_icon"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/anek_devanagari_semibold"
            android:text="@string/send"
            android:textColor="@color/white" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:text="@string/call"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvCall"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>