<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedbackActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash"
    tools:context=".FeedbackActivity">


    <TextView
        android:id="@+id/tvFeedbackPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_experience"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:fontFamily="@font/anek_devanagari_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:stepSize="1"
        android:rating="3"
        style="@style/CustomRatingBar"
        app:layout_constraintTop_toBottomOf="@id/tvFeedbackPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_comments"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/edittextshape"
        android:layout_marginTop="24dp"
        android:hint="@string/comments"
        android:autofillHints="@string/comments"
        android:textColorHint="@color/black"
        android:inputType="textMultiLine"
        android:drawableStart="@drawable/comment_icon"
        android:drawablePadding="5dp"
        android:padding="12dp"
        android:elevation="5dp"
        android:minLines="3"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread" />

    <Button
        android:id="@+id/btnSubmitFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_feedback"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/anek_devanagari_semibold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_comments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>